--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">User Modeling and Adaptive User Interaction <br> Special Issue on "Group Recommender Systems"</h1>
+      <h1 class="mb-4 pb-0">User Modeling and User-Adapted Interaction <br> Special Issue on "Group Recommender Systems"</h1>
     </div>
   </section>
 
