--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
         <div class="section-header">
           <h2>Important Dates</h2>
           <ul>
-            <li>Abstracts submission: <strong>May 28, 2021</strong></li>
-            <li>Abstracts notification: <strong>June 15, 2021</strong></li>
-            <li>Papers submission: <strong>September 15, 2021</strong></li>
+            <li>Abstract submission: <strong>May 28, 2021</strong></li>
+            <li>Abstract notification: <strong>June 15, 2021</strong></li>
+            <li>Paper submission: <strong>September 15, 2021</strong></li>
             <li>Author notification: <strong>December 15, 2021</strong></li>
-            <li>Revised papers submission: <strong>February 15, 2022</strong></li>
+            <li>Revised paper submission: <strong>February 15, 2022</strong></li>
             <li>Final notification: <strong>March 30, 2022</strong></li>
-            <li>Camera-ready papers submission: <strong>May 2, 2022</strong></li>
+            <li>Camera-ready paper submission: <strong>May 2, 2022</strong></li>
           </ul>
           <p>All deadlines are 11:59pm, AoE time (Anywhere on Earth).</p>
         </div>
