--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <li><a href="https://www.ludovicoboratto.com/" target="_blank">Ludovico Boratto</a>, University of Cagliari (Italy)</li>
             <li><a href="http://www.felfernig.eu/" target="_blank">Alexander Felfernig</a>, Graz University of Technology (Austria)</li>
             <li><a href="http://ase.ist.tugraz.at/" target="_blank">Martin Stettinger</a>, Graz University of Technology (Austria)</li>
-            <li><a href="http://markotkalcic.com/" target="_blank">Francesco Ricci</a>, niversity of Primorska in Koper (Slovenia)</li>
+            <li><a href="http://markotkalcic.com/" target="_blank">Marko Tkalčič</a>, University of Primorska in Koper (Slovenia)</li>
           </ul>
         </div>
       </div>
