--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
           <p>All submissions must be written in English. We expect authors, reviewers, and the organizing committee to adhere to the <a href="https://www.acm.org/special-interest-groups/volunteer-resources/acm-conflict-of-interest-policy" target="_blank">ACM’s Conflict of Interest Policy </a> and the <a href="https://www.acm.org/code-of-ethics" target="_blank">ACM’s Code of Ethics and Professional Conduct</a>. Authors should use follow the journal's <a href="http://www.umuai.org/submission.shtml#instructions" target="_blank">submission instructions</a>. </p>
           
           <p>Authors must submit an extended abstract via EasyChair by the deadline indicated below. It must be at most 3 pages long, not counting references, and formatted according to the journal template. The guest editors of the special issue will then screen all submitted extended abstracts and will invite authors of submissions that pass this screening to submit a full manuscript to be submitted via the journal’s submission system. Abstracts should be submitted as PDF files to Easychair at <a href="https://easychair.org/conferences/?conf=umuaigrouprecsys21" target="_blank">https://easychair.org/conferences/?conf=umuaigrouprecsys21</a>. </p>
+          
+          <p>After abtracts have been accepted, the final full submission needs to be done through the <a href="http://www.springer.com/computer/hci/journal/11257" target="_blank">UMUAI journal submission system</a>. </p> 
         </div>
       </div>
 
