--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="section-header">
           <h2>Special Issue Topics</h2>
           <p>We are interested in contributions focusing on different new and relevant aspects of group recommender systems, in particular, <strong>new developments</strong> on the algorithmic and user interface level as well as <strong>new applications</strong>, all accompanied by a corresponding <strong>evaluation</strong> (e.g., empirical study) that clearly shows significant improvements compared to the state of the art.</p>
-          <p>TThe general topics regarded as relevant for the special issue on "Group Recommender Systems"' include but are not limited to</p>
+          <p>The general topics regarded as relevant for the special issue on "Group Recommender Systems"' include but are not limited to</p>
           <ul>
               <li><strong>User modeling</strong>:
                   <ul>
